# craft-cli

./: .gitmodules  Cargo.toml  pyproject.toml  test.py  testing.py
python/: pyproject.toml
python/craft_cli/: dispatcher.py  messages.py  printer.py
python/craft_cli/_rs/: __init__.pyi  printer.pyi  utils.pyi
src/: craft_cli_utils.rs  emitter.rs  lib.rs  prelude.rs  printer.rs  test_utils.rs  tests.rs  utils.rs
