[package]
name = "craft-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "craft_cli"
crate-type = ["cdylib"]

[dependencies]
jiff = "0.2.8"
lazy_static = "1.5.0"
pyo3 = "0.24.0"
ratatui = "0.29.0"
termsize = "0.1.9"
