[package]
name = "craft-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "craft_cli"
crate-type = ["cdylib"]

# Set up a workspace. This is a hack to avoid having to repeat imports. For more information,
# see workspace.dependencies
[workspace]
members = ["."]

[workspace.dependencies]
# pyo3 is always needed, but tests additionally need the "auto-initialize" feature. To avoid
# having two disparate version specifications, it's instead specified here exactly once and then
# retrieved via "workspace = true".
pyo3 = "0.24.0"

[dependencies]
jiff = "0.2.8"
lazy_static = "1.5.0"
pyo3 = { workspace = true }
regex = "1.11.1"
termsize = "0.1.9"

[dev-dependencies]
pyo3 = { features = ["auto-initialize"], workspace = true }
tempdir = "0.3.7"
