[package]
name = "craft-cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "craft_cli"
crate-type = ["cdylib"]

# Set up a workspace. This is a hack to avoid having to repeat imports. For more information,
# see workspace.dependencies
[workspace]
members = ["."]

[workspace.dependencies]
# pyo3 is always needed, but tests additionally need the "auto-initialize" feature. To avoid
# having two disparate version specifications, it's instead specified here exactly once and then
# retrieved via "workspace = true".
pyo3 = "0.24.0"

[dependencies]
console = "0.16.0"
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
jiff = "0.2.15"
pyo3 = { workspace = true }
xdg = "3.0.0"

[dev-dependencies]
pyo3 = { features = ["auto-initialize"], workspace = true }
regex = "1.11.1"
